development-modal__content-added

--- a/index.html
+++ b/index.html
@@ -802,7 +802,36 @@
             <use href="./images/symbol-defs.svg#close-icon"></use>
           </svg>
         </button>
-        <b class="modal__title">This site is under development...</b>
+        <div class="development-modal__content">
+          <h2 class="development-modal__title">
+            I'm sorry, but this website is not yet fully completed.
+          </h2>
+          <p class="development-modal__text">
+            However, you can see my skills in responsive layout and writing simple scripts for this
+            resource.
+          </p>
+          <p class="development-modal__text">The next steps will be implemented soon:</p>
+          <ol>
+            <li>the site will be filled with relevant content</li>
+            <li>links to my projects will be added</li>
+            <li>photos will be updated and improved</li>
+            <li>the color palette will be changed</li>
+            <li>Sending information from users through forms on the site will work</li>
+          </ol>
+          <p class="development-modal__text">
+            However, right now you can download my resume by clicking on the button below.
+          </p>
+          <a
+            href="downloads/Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+            download="Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+            class="download-link download-link--modal"
+          >
+            <svg class="download-icon" width="16" height="16">
+              <use href="./images/symbol-defs.svg#icon-vector-btn"></use>
+            </svg>
+            Download CV
+          </a>
+        </div>
       </div>
     </div>
 
