content-is-done

--- a/about.html
+++ b/about.html
@@ -199,28 +199,32 @@
             <div class="about__info">
               <h2 class="title about__title"><span class="title-accent">01</span>about me</h2>
               <p class="about__subtitle">
-                I'm Professional Designer and Front-End Web Developer That Solve Your Problems
+                Unlock the Potential: Full-Stack Developer Ready to Elevate Your Team!
               </p>
               <p class="about__text">
-                AAmet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-                officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
-                amet.
+                I'm a 25-year-old residing in Ukraine with a master's degree in marketing and
+                English proficiency at a B2 level. My journey in web development began over a year
+                ago, and I've chosen the path of a Full-Stack Developer. This choice was driven by
+                my passion for crafting user interfaces and my love for algorithmic problem-solving
+                and data manipulation.
               </p>
               <p class="about__text">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-                officia consequat duis enim velit mollit.
+                My background in sales management honed my ability to design efficient workflows and
+                work with data reports. I discovered my aptitude for algorithm construction and data
+                handling during this time. Now, I'm embracing the role of a full-stack developer and
+                relishing every moment of it.
               </p>
               <ul class="about-page__stats">
                 <li class="about-page__stat">
                   <div class="about-page__stat-info">
-                    <span class="title-accent">25</span>
-                    <p class="abut-page__stat-text">Saticfied<br />Customers</p>
+                    <span class="title-accent">13</span>
+                    <p class="abut-page__stat-text">Months<br />of training</p>
                   </div>
                 </li>
                 <li class="about-page__stat">
                   <div class="about-page__stat-info">
                     <span class="title-accent">8</span>
-                    <p class="abut-page__stat-text">Year<br />of experience</p>
+                    <p class="abut-page__stat-text">Training <br />projects completed</p>
                   </div>
                 </li>
               </ul>
@@ -233,11 +237,21 @@
           <div class="skills__info">
             <h2 class="title skills__title"><span class="title-accent">02</span>My Skills</h2>
             <p class="skills__text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt sunt praesentium
-              quis enim iste a alias, harum aspernatur veritatis provident mollitia asperiores,
-              ducimus aliquid minima optio? Mollitia qui voluptate officiis pariatur est aut itaque
-              omnis laborum ea quod! Architecto omnis sapiente numquam vitae molestiae corrupti ab
-              doloremque quidem cum vero?
+              <b>HTML + CSS:</b> Proficient in HTML and CSS, I create structured web content and
+              design responsive, cross-browser-compatible interfaces using Sass/SCSS.
+            </p>
+            <p class="skills__text">
+              <b>JavaScript:</b> My JavaScript skills enable me to develop interactive web elements,
+              use AJAX/Fetch API for data retrieval, leverage ES6+ features, and optimize
+              performance.
+            </p>
+            <p class="skills__text">
+              <b>React:</b> I excel in React for front-end development, state management, reusable
+              component creation, and efficient utilization of React Router and Hooks.
+            </p>
+            <p class="skills__text">
+              <b>Node.js:</b> In Node.js, I specialize in back-end development, database integration
+              with MongoDB and Mongoose, authentication, authorization, and RESTful API development.
             </p>
             <a
               href="downloads/Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
@@ -279,7 +293,7 @@
                 <div class="skill__outer">
                   <div class="skill__inner">
                     <p class="skill__header">Hard Skills</p>
-                    <p class="skill__number" data-number="51">0%</p>
+                    <p class="skill__number" data-number="56">0%</p>
                   </div>
                 </div>
                 <svg class="skill__circle" width="160" height="160">
@@ -291,7 +305,7 @@
                   </defs>
                   <circle
                     class="circle"
-                    data-number="51"
+                    data-number="56"
                     cx="80"
                     cy="80"
                     r="70"
@@ -337,38 +351,38 @@
           <ul class="experiences__list">
             <li class="experiences__item">
               <h3 class="title experiences__item-title">
-                <span class="experiences__item-title-accent">01</span>Lead Web Developer
+                <span class="experiences__item-title-accent">01</span>Web development learning
               </h3>
               <p class="experiences__item-text">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Vuis enim
-                velit ullamco
+                Maintained a consistent learning schedule, successfully accomplishing objectives,
+                which strengthened my self-discipline and perseverance
               </p>
             </li>
             <li class="experiences__item">
               <h3 class="title experiences__item-title experiences__item-title--end">
-                <span class="experiences__item-title-accent">02</span>Lead Web Developer
+                <span class="experiences__item-title-accent">02</span>Working on Team Projects
               </h3>
               <p class="experiences__item-text">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Vuis enim
-                velit ullamco
+                Through teamwork on collaborative projects with fellow developers, I gained valuable
+                experience in effective communication and cooperation
               </p>
             </li>
             <li class="experiences__item">
               <h3 class="title experiences__item-title">
-                <span class="experiences__item-title-accent">03</span>Lead Web Developer
+                <span class="experiences__item-title-accent">03</span>Team Lead Experience
               </h3>
               <p class="experiences__item-text">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Vuis enim
-                velit ullamco
+                Organized and streamlined workflows, distributing tasks efficiently and ensuring
+                their timely completion
               </p>
             </li>
             <li class="experiences__item">
               <h3 class="title experiences__item-title experiences__item-title--end">
-                <span class="experiences__item-title-accent">04</span>Lead Web Developer
+                <span class="experiences__item-title-accent">04</span>Sales Manager Experience
               </h3>
               <p class="experiences__item-text">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Vuis enim
-                velit ullamco
+                Sales manager role enhanced my soft skills and analytical abilities, particularly in
+                identifying and addressing customer needs.
               </p>
             </li>
           </ul>
@@ -420,7 +434,7 @@
             </li>
           </ul>
           <div class="stacks__actions">
-            <h3 class="stacks__actions-title">let’s work together on Your Next Project</h3>
+            <h3 class="stacks__actions-title">Let's Build Something Great Together!</h3>
             <button class="stacks__hire-button button open-modal-button">HIRE ME NOW</button>
             <a
               href="downloads/Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
@@ -530,8 +544,7 @@
         </div>
         <div class="form-wrapper">
           <b class="form-info"
-            >I’m always open to discussing
-            <span class="form-info--accent">product design work</span> or partnership</b
+            >Send me <span class="form-info--accent">an email</span> with your proposals</b
           >
           <form class="form">
             <div class="form-fields">
