--- a/contact.html
+++ b/contact.html
@@ -244,37 +244,94 @@
           <div class="faq">
             <div class="faq-item">
               <input type="checkbox" class="faq-input visually-hidden" id="faq_1" />
-              <label for="faq_1" class="faq-title">Lorem ipsum dolor sit amet.</label>
+              <label for="faq_1" class="faq-title"
+                >Why did I decide to change the field and chose IT?</label
+              >
               <div class="faq-text">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, porro incidunt!
-                  Officia officiis, nemo voluptatum voluptate sint quam, exercitationem corporis id,
-                  ut eius mollitia commodi. Voluptatibus, voluptates tenetur ab praesentium,
-                  explicabo dolorem repellat, eius magni eveniet minus adipisci cum consequatur!
+                  In my current role as a sales manager, I'm heavily involved in sales and data
+                  analysis, particularly in calculating growth rates, relative indicators, and more.
+                </p>
+                <p>
+                  What I found most engaging in this job was creating algorithms, including those
+                  for identifying potential customers, building effective sales funnels, and
+                  monitoring recommended prices. Among these, I was particularly drawn to the
+                  algorithm for monitoring Recommended Retail Prices (RRP) due to its practicality.
+                </p>
+                <p>
+                  This experience solidified my decision to transition to IT, where I can
+                  continuously learn, solve problems, and apply my algorithmic thinking skills for
+                  success.
                 </p>
               </div>
             </div>
             <div class="faq-item">
               <input type="checkbox" class="faq-input visually-hidden" id="faq_2" />
-              <label for="faq_2" class="faq-title">Lorem ipsum dolor sit amet.</label>
+              <label for="faq_2" class="faq-title">Why did I leave my previous job?</label>
               <div class="faq-text">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, porro incidunt!
-                  Officia officiis, nemo voluptatum voluptate sint quam, exercitationem corporis id,
-                  ut eius mollitia commodi. Voluptatibus, voluptates tenetur ab praesentium,
-                  explicabo dolorem repellat, eius magni eveniet minus adipisci cum consequatur!
+                  Motivation is often described as a "carrot in front and carrot behind" scenario.
+                  In my case, I maintain a positive relationship with my previous job, and my
+                  transition to IT is primarily driven by the "carrot in front."
+                </p>
+                <p>
+                  I left my previous job in October, having given a three-month notice. As a Team
+                  Lead in the wholesale industry, I was motivated by the company's ambitious goals,
+                  especially its expansion and the launch of a new brand. I extended my stay there
+                  for an additional month to assist with the new brand's market launch.
+                </p>
+                <p>
+                  Nevertheless, my commitment to pursuing a career in IT remained unwavering. I
+                  recognized that the IT sector offers more opportunities for growth and
+                  development. Working in IT involves continuous learning, which aligns perfectly
+                  with my passion for logical thinking and problem-solving.
                 </p>
               </div>
             </div>
             <div class="faq-item">
               <input type="checkbox" class="faq-input visually-hidden" id="faq_3" />
-              <label for="faq_3" class="faq-title">Lorem ipsum dolor sit amet.</label>
+              <label for="faq_3" class="faq-title"
+                >How do I plan to develop in the next year?</label
+              >
               <div class="faq-text">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, porro incidunt!
-                  Officia officiis, nemo voluptatum voluptate sint quam, exercitationem corporis id,
-                  ut eius mollitia commodi. Voluptatibus, voluptates tenetur ab praesentium,
-                  explicabo dolorem repellat, eius magni eveniet minus adipisci cum consequatur!
+                  As I embark on this new journey, I'm well aware that one year is just the
+                  beginning. Nevertheless, I'm confident that this initial period will provide me
+                  with invaluable experience and the opportunity to enhance my skills. Collaborative
+                  teamwork and diverse tasks will be instrumental in my growth.
+                </p>
+                <p>
+                  Simultaneously, I plan to engage in personal projects to broaden my horizons. I
+                  recognize that the English-speaking developer community is extensive, and to tap
+                  into this broader network, I'm actively working on improving my technical English
+                  skills. This involves regularly consuming educational content in English, such as
+                  watching instructional videos on YouTube.
+                </p>
+              </div>
+            </div>
+            <div class="faq-item">
+              <input type="checkbox" class="faq-input visually-hidden" id="faq_4" />
+              <label for="faq_4" class="faq-title">Telling about my strengths.</label>
+              <div class="faq-text">
+                <p>
+                  <b>Fearlessness in Decision-Making:</b> I embrace the challenge of making bold
+                  decisions. For instance, my choice to transition to the IT field, even though it
+                  initially offers lower compensation and involves a steeper learning curve compared
+                  to my prior job, reflects my capacity for fearless decision-making. Throughout my
+                  academic journey, I consistently demonstrated this attribute, particularly when I
+                  assumed the role of a tech leader. When faced with tight project deadlines, I had
+                  to swiftly make critical decisions and shoulder the resulting responsibilities.
+                </p>
+                <p>
+                  <b>Dedication and Strategic Planning:</b> Let me illustrate this trait with a case
+                  study: At the start of the year, I set a clear goal to elevate my spoken English
+                  proficiency to the B1-B2 level within the year. I meticulously crafted a detailed
+                  plan, focusing on grammar enhancement during the initial quarter. In the second
+                  quarter, recognizing the finite motivation of my peers, I proactively gathered 6-7
+                  like-minded individuals, forming a dedicated speaking club. This strategic
+                  decision ensured consistent practice over the next six months. Over the past four
+                  months, I have consistently engaged in conversations with native English speakers,
+                  further demonstrating my dedication and effective planning.
                 </p>
               </div>
             </div>
@@ -376,8 +433,7 @@
         </div>
         <div class="form-wrapper">
           <b class="form-info"
-            >I’m always open to discussing
-            <span class="form-info--accent">product design work</span> or partnership</b
+            >Send me <span class="form-info--accent">an email</span> with your proposals</b
           >
           <form class="form">
             <div class="form-fields">
