--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                         src="./images/webstudio.png"
                         width="364"
                         height="249"
-                        alt="webstudio"
+                        alt="webstudio-view"
                         class="portfolio__item-img"
                       />
                       <p class="portfolio__item-overlay">
