--- a/portfolio.html
+++ b/portfolio.html
@@ -24,9 +24,10 @@
     <header class="header header-js">
       <div class="header-container">
         <a href="./index.html" lang="en" class="logo header__logo">
-          <span class="logo-letter">M</span>
-          <span class="logo-letter">O</span></a
-        >
+          <svg class="logo__icon" width="80" height="44">
+            <use href="./images/symbol-defs.svg#icon-logo"></use>
+          </svg>
+        </a>
         <nav class="nav header__nav">
           <ul class="nav__list">
             <li class="nav__item"><a href="./index.html" class="nav__link">home</a></li>
@@ -48,9 +49,10 @@
 
         <div class="mob-menu-container js-menu-container">
           <a href="./index.html" lang="en" class="logo header__logo">
-            <span class="logo-letter">M</span>
-            <span class="logo-letter">O</span></a
-          >
+            <svg class="logo__icon" width="80" height="44">
+              <use href="./images/symbol-defs.svg#icon-logo"></use>
+            </svg>
+          </a>
           <button class="mob-menu__btn--close js-menu-close">
             <svg class="mob-menu__icon--close" width="32px" height="32px">
               <use href="./images/symbol-defs.svg#icon-close"></use>
@@ -663,7 +665,7 @@
           <b class="form-info"
             >Send me <span class="form-info--accent">an email</span> with your proposals</b
           >
-          <form class="form">
+          <form class="form" action="https://formspree.io/f/xwkdyjnn" method="POST">
             <div class="form-fields">
               <div class="form-field">
                 <label for="name" class="form-label">Your name*</label>
@@ -695,7 +697,6 @@
                 id="message"
                 class="form-textarea form-input"
                 placeholder="Write your message here"
-                required
               ></textarea>
             </div>
             <button type="submit" class="form-button button">send message</button>
@@ -712,7 +713,7 @@
           </svg>
         </button>
         <b class="modal__title">Email me if you have any questions</b>
-        <form class="modal__form modal-form">
+        <form class="modal__form modal-form" action="https://formspree.io/f/xwkdyjnn" method="POST">
           <div class="modal-form__field">
             <label for="name" class="modal-form__contact-label">Name</label>
             <div class="modal-form__input-wrap">
