--- a/about.html
+++ b/about.html
@@ -192,7 +192,7 @@
             <div class="about_photo-wrapper">
               <img
                 src="./images/about-image.jpg"
-                alt=""
+                alt="Oleksandr - a man in a white shirt with a beard"
                 class="about__photo"
                 width="343"
                 height="472"
@@ -256,8 +256,8 @@
               with MongoDB and Mongoose, authentication, authorization, and RESTful API development.
             </p>
             <a
-              href="downloads/Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
-              download="Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+              href="downloads/Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
+              download="Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
               class="button download-btn"
             >
               Download CV
@@ -439,8 +439,8 @@
             <h3 class="stacks__actions-title">Let's Build Something Great Together!</h3>
             <button class="stacks__hire-button button open-modal-button">HIRE ME NOW</button>
             <a
-              href="downloads/Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
-              download="Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+              href="downloads/Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
+              download="Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
               class="download-link"
             >
               <svg class="download-icon" width="16" height="16">
@@ -481,7 +481,12 @@
                 </a>
               </li>
               <li class="footer__contact-item">
-                <a class="footer__contact-link" href="#" target="_blank" rel="noopener noreferrer">
+                <a
+                  class="footer__contact-link"
+                  href="https://maps.app.goo.gl/NBZ4kuqHtXoqqBdx8"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <svg class="footer__contact-icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-point"></use>
                   </svg>
@@ -656,8 +661,8 @@
           <button type="submit" class="modal-form__btn button">Send</button>
         </form>
         <a
-          href="downloads/Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
-          download="Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+          href="downloads/Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
+          download="Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
           class="download-link download-link--modal"
         >
           <svg class="download-icon" width="16" height="16">
