--- a/contact.html
+++ b/contact.html
@@ -215,7 +215,12 @@
                   </a>
                 </li>
                 <li class="contact__item">
-                  <a class="contact__link" href="#" target="_blank" rel="noopener noreferrer">
+                  <a
+                    class="contact__link"
+                    href="https://maps.app.goo.gl/NBZ4kuqHtXoqqBdx8"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
                     <svg class="contact__icon" width="24" height="24">
                       <use href="./images/symbol-defs.svg#icon-point"></use>
                     </svg>
@@ -370,7 +375,12 @@
                 </a>
               </li>
               <li class="footer__contact-item">
-                <a class="footer__contact-link" href="#" target="_blank" rel="noopener noreferrer">
+                <a
+                  class="footer__contact-link"
+                  href="https://maps.app.goo.gl/NBZ4kuqHtXoqqBdx8"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <svg class="footer__contact-icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-point"></use>
                   </svg>
