--- a/index.html
+++ b/index.html
@@ -199,7 +199,13 @@
           <div class="about__content">
             <ul class="about__stats">
               <li class="about__stat">
-                <img src="./images/about1.jpg" alt="" class="about__stat-image" />
+                <img
+                  src="./images/macbook-img.jpg"
+                  width="230"
+                  height="257"
+                  alt="Opened macbook"
+                  class="about__stat-image"
+                />
                 <div class="about__stat-info">
                   <p class="about__stat-text">Months<br />of training</p>
                   <span class="title-accent">13</span>
@@ -210,8 +216,13 @@
                   <span class="title-accent">8</span>
                   <p class="about__stat-text">Training <br />projects completed</p>
                 </div>
-
-                <img src="./images/about2.jpg" alt="" class="about__stat-image" />
+                <img
+                  src="./images/developer-img.jpg"
+                  width="230"
+                  height="257"
+                  alt="A phone with the text Developer on the screen"
+                  class="about__stat-image"
+                />
               </li>
             </ul>
             <div class="about__info">
@@ -279,8 +290,8 @@
             <h3 class="stacks__actions-title">Let's Build Something Great Together!</h3>
             <button class="stacks__hire-button button open-modal-button">HIRE ME NOW</button>
             <a
-              href="downloads/Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
-              download="Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+              href="downloads/Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
+              download="Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
               class="download-link"
             >
               <svg class="download-icon" width="16" height="16">
@@ -568,15 +579,15 @@
         <div class="container">
           <div class="testimonial__content">
             <img
-              src="./images/testomonial.jpg"
+              src="./images/testimonial-image.jpg"
               width="364"
               height="422"
-              alt=""
+              alt="Oleksandr is a man in a white shirt in profile"
               class="testimonial__image"
             />
             <div class="testimonial__wrapper">
               <h2 class="title testimonial__title">
-                <span class="title-accent">04</span>testomonial
+                <span class="title-accent">04</span>testimonial
               </h2>
               <div class="testimonial-slider swiper-container">
                 <div class="testimonial-slider__wrapper swiper-wrapper">
@@ -687,7 +698,12 @@
                 </a>
               </li>
               <li class="footer__contact-item">
-                <a class="footer__contact-link" href="#" target="_blank" rel="noopener noreferrer">
+                <a
+                  class="footer__contact-link"
+                  href="https://maps.app.goo.gl/NBZ4kuqHtXoqqBdx8"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <svg class="footer__contact-icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-point"></use>
                   </svg>
@@ -862,8 +878,8 @@
           <button type="submit" class="modal-form__btn button">Send</button>
         </form>
         <a
-          href="downloads/Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
-          download="Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+          href="downloads/Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
+          download="Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
           class="download-link download-link--modal"
         >
           <svg class="download-icon" width="16" height="16">
