--- a/portfolio.html
+++ b/portfolio.html
@@ -454,8 +454,8 @@
             <h3 class="stacks__actions-title">Let's Build Something Great Together!</h3>
             <button class="stacks__hire-button button open-modal-button">HIRE ME NOW</button>
             <a
-              href="downloads/Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
-              download="Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+              href="downloads/Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
+              download="Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
               class="download-link"
             >
               <svg class="download-icon" width="16" height="16">
@@ -598,7 +598,12 @@
                 </a>
               </li>
               <li class="footer__contact-item">
-                <a class="footer__contact-link" href="#" target="_blank" rel="noopener noreferrer">
+                <a
+                  class="footer__contact-link"
+                  href="https://maps.app.goo.gl/NBZ4kuqHtXoqqBdx8"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <svg class="footer__contact-icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-point"></use>
                   </svg>
@@ -773,8 +778,8 @@
           <button type="submit" class="modal-form__btn button">Send</button>
         </form>
         <a
-          href="downloads/Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
-          download="Oleksandr_Moskalets_Fullstack_Developer_Resume.pdf"
+          href="downloads/Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
+          download="Oleksandr_Moskalets_Full_Stack_Developer_CV.pdf"
           class="download-link download-link--modal"
         >
           <svg class="stacks__download-icon" width="16" height="16">
