fix-by-validator

--- a/about.html
+++ b/about.html
@@ -274,7 +274,7 @@
                 </div>
                 <svg class="skill__circle" width="160" height="160">
                   <defs>
-                    <linearGradient id="GradientColor">
+                    <linearGradient id="GradientColor1">
                       <stop offset="0%" stop-color="#FE390C" />
                       <stop offset="100%" stop-color="#A9A9AA" />
                     </linearGradient>
@@ -286,6 +286,7 @@
                     cy="80"
                     r="70"
                     stroke-linecap="round"
+                    stroke="url(#GradientColor1)"
                   />
                 </svg>
               </div>
@@ -300,7 +301,7 @@
                 </div>
                 <svg class="skill__circle" width="160" height="160">
                   <defs>
-                    <linearGradient id="GradientColor">
+                    <linearGradient id="GradientColor2">
                       <stop offset="0%" stop-color="#FE390C" />
                       <stop offset="100%" stop-color="#A9A9AA" />
                     </linearGradient>
@@ -312,6 +313,7 @@
                     cy="80"
                     r="70"
                     stroke-linecap="round"
+                    stroke="url(#GradientColor2)"
                   />
                 </svg>
               </div>
@@ -326,7 +328,7 @@
                 </div>
                 <svg class="skill__circle" width="160" height="160">
                   <defs>
-                    <linearGradient id="GradientColor">
+                    <linearGradient id="GradientColor3">
                       <stop offset="0%" stop-color="#FE390C" />
                       <stop offset="100%" stop-color="#A9A9AA" />
                     </linearGradient>
@@ -338,6 +340,7 @@
                     cy="80"
                     r="70"
                     stroke-linecap="round"
+                    stroke="url(#GradientColor3)"
                   />
                 </svg>
               </div>
@@ -556,11 +559,11 @@
           <form class="form" action="https://formspree.io/f/xwkdyjnn" method="POST">
             <div class="form-fields">
               <div class="form-field">
-                <label for="name" class="form-label">Your name*</label>
+                <label for="footer-name" class="form-label">Your name*</label>
                 <input
                   type="text"
                   name="name"
-                  id="name"
+                  id="footer-name"
                   class="form-input"
                   placeholder="Enter your name here"
                   required
