--- a/contact.html
+++ b/contact.html
@@ -450,11 +450,11 @@
           <form class="form" action="https://formspree.io/f/xwkdyjnn" method="POST">
             <div class="form-fields">
               <div class="form-field">
-                <label for="name" class="form-label">Your name*</label>
+                <label for="footer-name" class="form-label">Your name*</label>
                 <input
                   type="text"
                   name="name"
-                  id="name"
+                  id="footer-name"
                   class="form-input"
                   placeholder="Enter your name here"
                   required
