--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
           </div>
           <div class="portfolio__wrapper">
             <div class="portfolio-slider swiper-container">
-              <ul class="portfolio__list portfolio-slider__wrapper swiper-wrapper" portfolio-list>
+              <ul class="portfolio__list portfolio-slider__wrapper swiper-wrapper">
                 <li class="portfolio__item swiper-slide ui-ux">
                   <a
                     class="portfolio__item-link link"
@@ -773,11 +773,11 @@
           <form class="form" action="https://formspree.io/f/xwkdyjnn" method="POST">
             <div class="form-fields">
               <div class="form-field">
-                <label for="name" class="form-label">Your name*</label>
+                <label for="footer-name" class="form-label">Your name*</label>
                 <input
                   type="text"
                   name="name"
-                  id="name"
+                  id="footer-name"
                   class="form-input"
                   placeholder="Enter your name here"
                   required
