--- a/portfolio.html
+++ b/portfolio.html
@@ -215,7 +215,7 @@
               </li>
             </ul>
           </div>
-          <ul class="portfolio__list portfolio__list--portfoio" portfolio-list>
+          <ul class="portfolio__list portfolio__list--portfoio">
             <li class="portfolio__item portfolio__item--portfolio full-stack">
               <a
                 class="portfolio__item-link link"
@@ -673,11 +673,11 @@
           <form class="form" action="https://formspree.io/f/xwkdyjnn" method="POST">
             <div class="form-fields">
               <div class="form-field">
-                <label for="name" class="form-label">Your name*</label>
+                <label for="footer-name" class="form-label">Your name*</label>
                 <input
                   type="text"
                   name="name"
-                  id="name"
+                  id="footer-name"
                   class="form-input"
                   placeholder="Enter your name here"
                   required
